frontend/test/should_pass/log.grg
using attrib_model_001;

rule r {
	nd : NDOUBLE;
	-ed:EDOUBLE->;

	if {
		nd.a == Math::log(ed.a, nd.a);
	}

	modify {
		eval {
			nd.a = Math::log(ed.a, nd.a);
		}
	}
}

