frontend/test/should_fail/mapset_004.grg
using mapset_model;

rule mapset {
	a:A;
	
	modify {
		eval {
			a.intSet = a.strToInt.domain();
		}
	}
}

